Fix question answers width on small devices. Decrease max-width of content.

--- a/src/app/dashboard/dashboard-content/dashboard-content.component.scss
+++ b/src/app/dashboard/dashboard-content/dashboard-content.component.scss
@@ -45,7 +45,7 @@
 
   .plan-content {
     padding: 10px;
-    max-width: 780px;
+    max-width: 732px;
     margin: auto;
   }
 }
