--- a/src/app/dashboard/git-task/git-task.component.scss
+++ b/src/app/dashboard/git-task/git-task.component.scss
@@ -1,5 +1,5 @@
 .task {
-  max-width: 780px;
+  max-width: 732px;
   margin: 10px 0 10px 10px;
 }
 
